Update fix-scrollbar-chrome.css

--- a/src/css/fix-scrollbar-chrome.css
+++ b/src/css/fix-scrollbar-chrome.css
@@ -2,16 +2,25 @@
     width: 8px;
 }
 
-::-webkit-scrollbar-track {
-    border-radius: 8px;
-}
-::-webkit-scrollbar-track:hover {
-    background-color: #171717;
-}
-
 ::-webkit-scrollbar-thumb {
     border-radius: 8px;
     border: 3px solid transparent;
     background-clip: content-box;
     background-color: #959595;
 }
+
+
+
+/* FOR ROUNDED CORNERS
+::-webkit-scrollbar-track {
+    border-radius: 8px;
+}
+*/
+
+/* Dark mode
+@media (prefers-color-scheme: dark) {
+    ::-webkit-scrollbar-track:hover {
+        background-color: #202020;
+    }    
+}
+*/
